// Copyright Â© 2022 The Things Network Foundation, The Things Industries B.V.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package ttn.lorawan.v3;

import "ttn/lorawan/v3/client.proto";
import "ttn/lorawan/v3/rights.proto";

option go_package = "go.thethings.network/lorawan-stack/v3/pkg/ttnpb";

// CreateClientEmailMessage is used as a wrapper for handling the email regarding the create client procedure.
message CreateClientEmailMessage {
  CreateClientRequest create_client_request = 1;
  APIKey api_key = 2;
}
